# gemfire-client-sample

./: CMakeLists.txt  Makefile  main.cpp
cmake/: FindVMwareGemFireNative.cmake
